--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
         android:id="@+id/coordinates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/your_coordinates"
+        android:layout_alignParentTop="true"
         />
 
     <TextView
@@ -19,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/accuracy"
+        android:layout_below="@id/coordinates"
         />
 
     <TextView
@@ -26,6 +29,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/location_time"
+        android:layout_below="@id/accuracy"
+        />
+
+    <TextView
+        android:id="@+id/awaiting_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignRight="@id/accuracy"
+        android:text="@string/awaiting_location"
         />
 
     <CheckBox
@@ -34,6 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/harvester_at_work"
         android:onClick="onCheckboxClicked"
+        android:layout_below="@id/location_time"
         />
 
     <CheckBox
@@ -42,6 +56,7 @@
         android:layout_height="wrap_content"
         android:text="@string/lumberjacks_at_work"
         android:onClick="onCheckboxClicked"
+        android:layout_below="@id/harvesterAtWorkCb"
         />
 
     <CheckBox
@@ -50,6 +65,7 @@
         android:layout_height="wrap_content"
         android:text="@string/forwarder_at_work"
         android:onClick="onCheckboxClicked"
+        android:layout_below="@id/lumberjacksAtWorkCb"
         />
 
     <CheckBox
@@ -58,6 +74,25 @@
         android:layout_height="wrap_content"
         android:text="@string/blocked_road"
         android:onClick="onCheckboxClicked"
+        android:layout_below="@id/forwarderAtWorkCb"
+        />
+
+    <CheckBox
+        android:id="@+id/harvestedWoodCb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/harvested_wood"
+        android:onClick="onCheckboxClicked"
+        android:layout_below="@id/blockedRoadCb"
+        />
+
+    <CheckBox
+        android:id="@+id/loggingSiteCb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logging_site"
+        android:onClick="onCheckboxClicked"
+        android:layout_below="@id/harvestedWoodCb"
         />
 
     <Button
@@ -66,7 +101,9 @@
         android:layout_height="wrap_content"
         android:text="@string/send_alert"
         android:onClick="onSendAlertClicked"
-        android:enabled="false"/>
+        android:enabled="false"
+        android:layout_below="@id/loggingSiteCb"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
